Fixed bug with footer on small screen

--- a/styles/style.css
+++ b/styles/style.css
@@ -339,8 +339,12 @@
     gap: 10px;
   }
 
+  .footer {
+    min-block-size: 688px;
+  }
+
   .footer__title {
     font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-    min-block-size: 688px;
+
   }
 }
